--- a/src/components/messageThread.css
+++ b/src/components/messageThread.css
@@ -4,21 +4,27 @@
   border-radius: 15px;
 }
 .sentContainer {
+  display: flex;
 }
 .messageContent {
   position: relative;
   width: 755px;
   font-family: Arial;
   font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 150%;
   color: #000000;
   text-align: left;
   padding: 15px;
 }
 .avatar {
   border-radius: 50%;
-  length: 10%;
-  width: 10%;
+  length: 50%;
+  width: 50%;
+}
+.avatarContainer {
+  width: 150px;
+}
+.messageThread {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
